--- a/E-commerce Platform/Source_code/Register/pom.xml
+++ b/E-commerce Platform/Source_code/Register/pom.xml
@@ -32,31 +32,77 @@
   </repositories>
 
   <dependencies>
+
+    <dependency>
+      <groupId>com.sun.mail</groupId>
+      <artifactId>jakarta.mail</artifactId>
+      <version>2.0.1</version>
+    </dependency>
+
+
+    <dependency>
+      <groupId>io.micronaut.email</groupId>
+      <artifactId>micronaut-email-template</artifactId>
+      <version>2.8.0</version>
+    </dependency>
+
+
+    <dependency>
+      <groupId>io.micronaut.email</groupId>
+      <artifactId>micronaut-email-javamail</artifactId>
+      <version>2.8.0</version>
+    </dependency>
+
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>7.0.0-M4</version>
+    </dependency>
+
+  
+    <dependency>
+      <groupId>io.micronaut.sql</groupId>
+      <artifactId>micronaut-jdbc-hikari</artifactId>
+      <version>6.1.1</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>de.mkammerer</groupId>
+      <artifactId>argon2-jvm</artifactId>
+      <version>2.12</version>
+    </dependency>
+
     <dependency>
       <groupId>io.micronaut</groupId>
       <artifactId>micronaut-http-client-jdk</artifactId>
       <scope>compile</scope>
     </dependency>
+
     <dependency>
       <groupId>io.micronaut</groupId>
       <artifactId>micronaut-http-server-netty</artifactId>
       <scope>compile</scope>
     </dependency>
+
     <dependency>
       <groupId>io.micronaut.aws</groupId>
       <artifactId>micronaut-aws-cloudwatch-logging</artifactId>
       <scope>compile</scope>
     </dependency>
+
     <dependency>
       <groupId>io.micronaut.jsonschema</groupId>
       <artifactId>micronaut-json-schema-annotations</artifactId>
       <scope>compile</scope>
     </dependency>
+
     <dependency>
       <groupId>io.micronaut.kafka</groupId>
       <artifactId>micronaut-kafka</artifactId>
       <scope>compile</scope>
     </dependency>
+
     <dependency>
       <groupId>io.micronaut.rabbitmq</groupId>
       <artifactId>micronaut-rabbitmq</artifactId>
@@ -67,16 +113,13 @@
       <artifactId>micronaut-security-oauth2</artifactId>
       <scope>compile</scope>
     </dependency>
+
     <dependency>
       <groupId>io.micronaut.serde</groupId>
       <artifactId>micronaut-serde-jackson</artifactId>
       <scope>compile</scope>
     </dependency>
-    <dependency>
-      <groupId>io.micronaut.sql</groupId>
-      <artifactId>micronaut-jdbc-hikari</artifactId>
-      <scope>compile</scope>
-    </dependency>
+
     <dependency>
       <groupId>io.micronaut.toml</groupId>
       <artifactId>micronaut-toml</artifactId>
