--- a/E-commerce Platform/Source_code/Register/micronaut-cli.yml
+++ b/E-commerce Platform/Source_code/Register/micronaut-cli.yml
@@ -1,6 +1,6 @@
 applicationType: default
 defaultPackage: com.register
-testFramework: spock
+testFramework: junit
 sourceLanguage: java
 buildTool: maven
-features: [amazon-cloudwatch-logging, annotation-api, app-name, groovy-maven-plus-plugin, http-client-jdk, java, java-application, jdbc-hikari, json-schema, json-schema-validation, kafka, logback, maven, maven-enforcer-plugin, micronaut-aot, micronaut-http-validation, netty-server, openapi, postgres, rabbitmq, rapidoc, readme, security-annotations, security-oauth2, serialization-jackson, shade, spock, static-resources, swagger-ui, test-resources, toml, toml-build, validation]
+features: [annotation-api, app-name, http-client, java, java-application, jdbc-hikari, json-schema, junit, junit-params, logback, maven, maven-enforcer-plugin, micronaut-aot, micronaut-http-validation, micronaut-test-rest-assured, mysql, netty-server, readme, security, security-annotations, security-csrf, serialization-jackson, shade, static-resources, test-resources, yaml, yaml-build]
