--- a/E-commerce Platform/Source_code/Register/docker-compose.yml
+++ b/E-commerce Platform/Source_code/Register/docker-compose.yml
@@ -15,3 +15,11 @@ services:
       interval: 5s
       timeout: 10s
       retries: 10
+
+  fakesmtp:
+    image: reachfive/fake-smtp-server
+    container_name: fakesmtp
+    restart: unless-stopped
+    ports:
+      - "1025:25" 
+      - "8081:81" 
