--- a/E-commerce Platform/Source_code/Register/pom.xml
+++ b/E-commerce Platform/Source_code/Register/pom.xml
@@ -34,16 +34,9 @@
   <dependencies>
 
     <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-jdbc</artifactId>
-      <version>7.0.0-M4</version>
-    </dependency>
-
-
-    <dependency>
-      <groupId>de.mkammerer</groupId>
-      <artifactId>argon2-jvm</artifactId>
-      <version>2.12</version>
+      <groupId>io.micronaut.email</groupId>
+      <artifactId>micronaut-email-javamail-composer</artifactId>
+      <version>2.8.0</version>
     </dependency>
 
 
@@ -51,6 +44,33 @@
       <groupId>io.micronaut.email</groupId>
       <artifactId>micronaut-email-javamail</artifactId>
       <version>2.8.0</version>
+    </dependency>
+
+
+    <dependency>
+      <groupId>io.micronaut.email</groupId>
+      <artifactId>micronaut-email</artifactId>
+      <version>2.8.0</version>
+    </dependency>
+
+
+    <dependency>
+      <groupId>io.micronaut</groupId>
+      <artifactId>micronaut-spring</artifactId>
+      <version>2.0.1</version>
+    </dependency>
+
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>7.0.0-M4</version>
+    </dependency>
+
+    <dependency>
+      <groupId>de.mkammerer</groupId>
+      <artifactId>argon2-jvm</artifactId>
+      <version>2.12</version>
     </dependency>
 
     <dependency>
@@ -66,16 +86,6 @@
     <dependency>
       <groupId>io.micronaut.jsonschema</groupId>
       <artifactId>micronaut-json-schema-annotations</artifactId>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.micronaut.security</groupId>
-      <artifactId>micronaut-security</artifactId>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.micronaut.security</groupId>
-      <artifactId>micronaut-security-csrf</artifactId>
       <scope>compile</scope>
     </dependency>
     <dependency>
