--- a/E-commerce Platform/Source_code/Register/pom.xml
+++ b/E-commerce Platform/Source_code/Register/pom.xml
@@ -34,6 +34,20 @@
   <dependencies>
 
     <dependency>
+      <groupId>com.sun.mail</groupId>
+      <artifactId>jakarta.mail</artifactId>
+      <version>2.0.1</version>
+    </dependency>
+
+
+    <dependency>
+      <groupId>io.github.cdimascio</groupId>
+      <artifactId>dotenv-java</artifactId>
+      <version>3.2.0</version>
+    </dependency>
+
+
+    <dependency>
       <groupId>io.micronaut.email</groupId>
       <artifactId>micronaut-email-javamail-composer</artifactId>
       <version>2.8.0</version>
