--- a/E-commerce Platform/Source_code/Register/pom.xml
+++ b/E-commerce Platform/Source_code/Register/pom.xml
@@ -33,6 +33,13 @@
 
   <dependencies>
 
+  <dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-core</artifactId>
+    <version>5.18.0</version>
+    <scope>test</scope>
+  </dependency>
+
     <dependency>
       <groupId>com.sun.mail</groupId>
       <artifactId>jakarta.mail</artifactId>
